# market-regime-detection

./: .gitignore  Makefile  README.md  api.py  dashboard.html  pyproject.toml  requirements.txt
config/: config.yaml  schema.py
experiments/: logger.py
src/market_regime/: backtest.py  cli.py  data.py  decision.py  explain.py  features.py  main.py  model.py  pipeline.py  research.py  risk.py  strategy.py  utils.py  validation.py  visualize.py
src/market_regime/config/: config.yaml
src/market_regime/experiments/: log.jsonl
tests/: conftest.py  test_model_and_risk.py  test_research_report.py
